source/stylesheets/_global.scss
body {
    text-align: center;
    font-family: "Lato",Helvetica,Arial,sans-serif;
    font-size: $base-font-size;
    font-weight: 300;
    margin: 0;
    padding: 0;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    text-align: center;
}

.wrap {
    margin: 0 auto;
    width: $wrap-width-mobile;
    @include media-query($on-laptop) {
        width: $wrap-width-desktop;
    }
}

#disqus_thread {
    margin: $margin*2 auto;
}

.card {
    margin: $margin;
    min-width: $card-min-width;
    display: inline-block;
    vertical-align: top;
    border-radius: 5px;
    overflow: hidden;
    text-align: center;
    border: 1px solid #ccc;
    @include media-query($on-laptop) {
        width: $card-width-desktop;
    }

    &:hover {
        text-decoration: none;
    }

    .card-img-wrap {
        display: block;

        img {
            margin: $card-img-height/2 0;
            height: $card-img-height;
        }
    }

    .card-content {
        font-size: 0.5em;
        border-top: 1px solid #ccc;
        padding: $margin;
        background-color: $off-white;
        color: black;

        p {
            font-size: $card-p-size;
        }

        time {
            font-size: $card-p-size + 0.15em; //slightly bigger than text's 1em
        }
    }
    /* whenever the entire card is hovered over */
    &:hover {
        .card-content {
            margin-bottom: none;
            background-color: white;
        }
    }
}

.dotted_link {
    text-decoration: none;
    color: $text-color;
    border-bottom: 1px dotted #ccc;

    &:hover,
    &:visited:hover {
        text-decoration: none;
        background-color: $grey-color-light;
        color: $text-color;
    }
}

.btn-a {
    border: 1px solid white;
    display: inline-block;
    border-radius: 3px;
    padding: $a-padding ($a-padding - 0.05em);
    color: white;
    text-decoration: none;
    transition: color 0.1s linear;
    vertical-align: bottom;

    img {
        text-align: center;
        margin: 0 auto;
        vertical-align: bottom;
        display: block; //required to remove a weird margin on the bottom of img when nested within an anchor
    }

    &:hover {
        background: rgba(0,0,0,0.2);
        color: white;
        transition: all 0.15s linear;
    }
    @include media-query($on-laptop) {
        padding: $a-padding/2 ($a-padding/2 - 0.05em);
    }
}

a {
    color: $link-color;
    text-decoration: none;

    &:visited {
        color: $link-color;
    }

    &:hover {
        color: $text-color;
        text-decoration: underline;
    }
}

.row {
    width: 90%;
    margin: 6em auto;
}

.flex_row {
    // uses flexbox - https://css-tricks.com/snippets/css/a-guide-to-flexbox/
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
}

.icon {
    height: $icon-len;
    width: $icon-len;

    img {
        height: $icon-len;
        width: $icon-len;
    }
}

.small-icon {
    height: $small-icon-len;
    width: $small-icon-len;
}

.index {
    width: 100%;
    font-size: 1.1em;
    text-shadow: 0 0 10px #888888;
}

.welcome {
    -webkit-animation-name: welcome;
    -webkit-animation-duration: 0.9s;
}
@-webkit-keyframes welcome {
    from {
        -webkit-transform: scale(0);
        opacity: 0;
    }

    50% {
        -webkit-transform: scale(0);
        opacity: 0;
    }

    82.5% {
        -webkit-transform: scale(1.03);
        -webkit-animation-timing-function: ease-out;
        opacity: 1;
    }

    to {
        -webkit-transform: scale(1);
    }
}

